[package]
name = "test_with_parameters"
description = "A μ-crate for parameterised unit tests."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/matthew-healy/test_with_parameters"

[dependencies]
quote = "1.0.10"
syn = { version = "1.0.82", features = ["full"] }

[lib]
proc_macro = true